<resources>
    <!-- Strings das Activitys -->
    <string name="title_fornecedor">Fornecedores</string>
    <string name="title_produto">Produtos</string>
    <string name="title_pessoa">Pessoas</string>
    <string name="title_consulta">Consultar</string>
    <string name="title_login">Login</string>
    <string name="title_administrador">Administrador</string>
    <string name="title_activity_tela_principal" translatable="false">E-Commerce</string>
    <string name="title_detalhes">Detalhes</string>

    <!-- Strings dos botões do Menu -->
    <string name="menu_save">Salvar</string>
    <string name="menu_edit">Editar</string>
    <string name="menu_search">Pesquisar</string>
    <string name="menu_delete">Excluir</string>
    <string name="menu_manga" translatable="false">Mangas</string>
    <string name="menu_novel" translatable="false">Light Novel</string>
    <string name="menu_pdf" translatable="false">PDF</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_carrinho">Carrinho</string>

    <!-- Strings dos Labels das Activitys -->
    <string name="app_name" translatable="false">E-commerce</string>
    <string name="string_nome">Nome:</string>
    <string name="string_cep">CEP:</string>
    <string name="string_cidade">Cidade:</string>
    <string name="string_pais">País:</string>
    <string name="string_estado">Estado:</string>
    <string name="string_telefone">Telefone:</string>
    <string name="string_complemento">Complemento:</string>
    <string name="string_valor">Valor:</string>
    <string name="string_quantidade">Quantidade:</string>
    <string name="string_tipo">Tipo:</string>
    <string name="string_descricao">Descrição:</string>
    <string name="string_senha">Senha:</string>
    <string name="string_rpt_senha">Repetir Senha:</string>
    <string name="string_CPF" translatable="false">CPF:</string>
    <string name="string_datNasc">Data de Nascimento:</string>
    <string name="string_emaiul">E-mail:</string>
    <string name="string_selecione">Selecione:</string>
    <string name="string_pesquisar">Pesquisar:</string>

    <string name="string_login">Faça seu Login</string>
    <string name="string_cadastro">Ou faça seu cadastro.</string>
    <string name="string_email">E-mail</string>
    <string name="string_info_email">Informe seu E-mail.</string>
    <string name="string_info_senha">Informe sua senha.</string>
    <string name="string_bt_login">Login</string>
    <string name="string_bt_cadastrar">Cadastrar</string>
    <string name="string_nav_action" translatable="false">Action Figure</string>
    <string name="string_nav_logout" translatable="false">Logout</string>
    <string name="string_nav_sac">Fale conosco</string>
    <string name="string_rb_manga" translatable="false">Manga</string>
    <string name="string_rb_novel" translatable="false">Light Novel</string>
    <string name="string_frag_abrir_pdf">Abrir PDF</string>
    <string name="string_frag_downlaod" translatable="false">Dowload PDF</string>
    <string name="string_manga_nome">Nome</string>
    <string name="string_manga_autor">Autor</string>
    <string name ="string_comentario">Comentário</string>
    <string name="string_campo_nao_obg">Campo não obrigatorio</string>
    <string name="string_btn_enviar">Enviar</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="insira_seu_cpf">Insira seu CPF</string>
    <string name="insira_sua_data_de_nascimento">Insira sua Data de Nascimento</string>
    <string name="insira_seu_email">Insira seu Email</string>
    <string name="listagem_dos_mangas">Listagem dos Mangas</string>
    <string name="listagem_das_novels">Listagem das Novels</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="title_id_itens" translatable="false">ID</string>
    <string name="title_nome_itens">NOME</string>


    <!--Strings do Facebook-->
    <string name="facebook_app_id" translatable="false">289496978230024</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb289496978230024</string>

</resources>
