<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/button_search"
        android:orderInCategory="100"
        android:title="@string/menu_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/button_carrinho"
        android:orderInCategory="150"
        android:title="@string/menu_carrinho"
        android:icon="@drawable/ic_shopping_cart"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/button_save"
        android:orderInCategory="200"
        android:title="@string/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/button_edit"
        android:orderInCategory="300"
        android:title="@string/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/button_delete"
        android:orderInCategory="400"
        android:title="@string/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="never" />

</menu>