<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leonardo_matheus.e_commerce.CadastroProdutos">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include android:id="@+id/ToolbarMenu" layout="@layout/toolbar_menu" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <TextView
        android:id="@+id/TV_Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/string_nome" />

    <EditText
        android:id="@+id/ET_Nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Nome"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:labelFor="@id/ET_Nome"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TV_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_Nome"
        android:layout_marginTop="25dp"
        android:text="@string/string_valor" />

    <EditText
        android:id="@+id/ET_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_Valor"
        android:layout_marginTop="5dp"
        android:width="150dp"
        android:ems="10"
        android:labelFor="@id/ET_Valor"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/TV_Quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_quantidade"
        android:layout_above="@+id/ET_Quantidade"
        android:layout_alignLeft="@+id/ET_Quantidade"
        android:layout_alignStart="@+id/ET_Quantidade" />

    <EditText
        android:id="@+id/ET_Quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="150dp"
        android:ems="10"
        android:labelFor="@id/ET_Quantidade"
        android:inputType="numberDecimal"
        android:layout_alignBaseline="@+id/ET_Valor"
        android:layout_alignBottom="@+id/ET_Valor"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/TV_Tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_Quantidade"
        android:layout_marginTop="25dp"
        android:text="@string/string_tipo"/>

    <Spinner
        android:id="@+id/SP_Tipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/TV_Tipo"
        style="@style/spinner_style" />

        <TextView
            android:id="@+id/TV_Fornecedores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/SP_Tipo"
            android:text="@string/title_fornecedor" />

        <Spinner
            android:id="@+id/SP_Fornecedores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/TV_Fornecedores"
            style="@style/spinner_style" />

        <TextView
        android:id="@+id/TV_Descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SP_Fornecedores"
        android:layout_marginTop="25dp"
        android:text="@string/string_descricao" />

    <EditText
        android:id="@+id/ET_Descricao"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/TV_Descricao"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="5"
        android:gravity="start"
        android:labelFor="@id/ET_Descricao" />
    </RelativeLayout>

</RelativeLayout>
